[package]
name = "task-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
genai-types = "0.4.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:task-manager"

[package.metadata.component.target.dependencies]
"theater:simple" = { path = "./wit/deps/theater-simple" }
